--- a/resources/sass/css_custom.scss
+++ b/resources/sass/css_custom.scss
@@ -6,3 +6,7 @@
     background-position: center;
     background-repeat: no-repeat;
   }
+*{
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
