--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10834,7 +10834,7 @@ textarea.form-control-lg {
 }
 .masthead {
   height: 100%;
-  min-height: 500px;
+  min-height: 100vh;
   background-image: url("/img/bg_bggenerator_com.png");
   background-size: cover;
   background-position: center;
