--- a/resources/sass/css_custom.scss
+++ b/resources/sass/css_custom.scss
@@ -1,12 +1,12 @@
 .masthead {
     height: 100%;
-    min-height: 500px;
-    background-image: url('/img/bg_bggenerator_com.png');
+    min-height: 100vh;
+    background-image: url("/img/bg_bggenerator_com.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-  }
-*{
-    font-family: 'Open Sans', sans-serif;
-    font-family: 'Roboto', sans-serif;
+}
+* {
+    font-family: "Open Sans", sans-serif;
+    font-family: "Roboto", sans-serif;
 }
