--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,11 @@
 @import '~bootstrap/scss/bootstrap';
 
 @import 'css_custom';
+
+//font-awesome
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/regular";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
+
+@import 'above';
