--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10846,6 +10846,19 @@ textarea.form-control-lg {
   font-family: "Roboto", sans-serif;
 }
 
+.articlesForm {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.bg-custom {
+  background-color: transparent;
+}
+
+@media (min-width: 991px) {
+  .bg-custom {
+    background-color: white;
+  }
+}
 /*!
  * Font Awesome Free 5.15.3 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
@@ -16981,13 +16994,15 @@ readers do not read off random characters that represent icons */
 }
 
 .aboveContainer {
-  height: 100vh;
+  height: 60vh;
 }
 
 .card-signin {
   border: 0;
   border-radius: 1rem;
   box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 100%;
 }
 
 .card-signin .card-title {
@@ -17004,7 +17019,7 @@ readers do not read off random characters that represent icons */
   width: 100%;
 }
 
-.form-signin .btn {
+.form-signin {
   font-size: 80%;
   border-radius: 5rem;
   letter-spacing: 0.1rem;
@@ -17089,16 +17104,6 @@ readers do not read off random characters that represent icons */
   padding-bottom: calc(var(--input-padding-y) / 3);
   font-size: 12px;
   color: #777;
-}
-
-.btn-google {
-  color: white;
-  background-color: #ea4335;
-}
-
-.btn-facebook {
-  color: white;
-  background-color: #3b5998;
 }
 
 /* Fallback for Edge
