--- a/resources/sass/above.scss
+++ b/resources/sass/above.scss
@@ -4,12 +4,14 @@
   }
 
   .aboveContainer{
-    height: 100vh;
-}
+    height: 60vh;
+  }
   .card-signin {
     border: 0;
     border-radius: 1rem;
     box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 100%;
   }
 
   .card-signin .card-title {
@@ -26,7 +28,7 @@
     width: 100%;
   }
 
-  .form-signin .btn {
+  .form-signin {
     font-size: 80%;
     border-radius: 5rem;
     letter-spacing: .1rem;
@@ -97,15 +99,6 @@
     color: #777;
   }
 
-  .btn-google {
-    color: white;
-    background-color: #ea4335;
-  }
-
-  .btn-facebook {
-    color: white;
-    background-color: #3b5998;
-  }
 
   /* Fallback for Edge
   -------------------------------------------------- */
