--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10859,6 +10859,13 @@ textarea.form-control-lg {
     background-color: white;
   }
 }
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+}
+
 /*!
  * Font Awesome Free 5.15.3 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
