--- a/resources/sass/css_custom.scss
+++ b/resources/sass/css_custom.scss
@@ -22,3 +22,10 @@
          background-color: white;
         }
     }
+
+.footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+}
