--- a/resources/sass/css_custom.scss
+++ b/resources/sass/css_custom.scss
@@ -22,7 +22,10 @@
          background-color: white;
         }
     }
-    :root {
+
+
+    //Register form custom
+:root {
         --input-padding-x: 1.5rem;
         --input-padding-y: .75rem;
       }
@@ -48,7 +51,7 @@
       .card-signin .card-img-left {
         width: 45%;
         /* Link to your background image using in the property below! */
-        background: scroll center url('https://source.unsplash.com/WEQbe2jBg40/414x512');
+        background: scroll center url('https://freepikpsd.com/wp-content/uploads/2019/10/registration-icon-png-1-Transparent-Images.png');
         background-size: cover;
       }
 
@@ -140,3 +143,120 @@
         color: white;
         background-color: #3b5998;
       }
+      // --end register form custom--
+
+      //form login custom
+      :root {
+        --input-padding-x: 1.5rem;
+        --input-padding-y: 0.75rem;
+      }
+
+      .login,
+      .image {
+        min-height: 50vh;
+        min-width: 50vw;
+      }
+
+      .bg-image {
+        background-image: url('https://source.unsplash.com/WEQbe2jBg40/600x1200');
+        background-size: cover;
+        background-position: center;
+      }
+
+      .login-heading {
+        font-weight: 300;
+      }
+
+      .btn-login {
+        font-size: 0.9rem;
+        letter-spacing: 0.05rem;
+        padding: 0.75rem 1rem;
+        border-radius: 2rem;
+      }
+
+      .form-label-group {
+        position: relative;
+        margin-bottom: 1rem;
+      }
+
+      .form-label-group>input,
+      .form-label-group>label {
+        padding: var(--input-padding-y) var(--input-padding-x);
+        height: auto;
+        border-radius: 2rem;
+      }
+
+      .form-label-group>label {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 100%;
+        margin-bottom: 0;
+        /* Override default `<label>` margin */
+        line-height: 1.5;
+        color: #495057;
+        cursor: text;
+        /* Match the input under the label */
+        border: 1px solid transparent;
+        border-radius: .25rem;
+        transition: all .1s ease-in-out;
+      }
+
+      .form-label-group input::-webkit-input-placeholder {
+        color: transparent;
+      }
+
+      .form-label-group input:-ms-input-placeholder {
+        color: transparent;
+      }
+
+      .form-label-group input::-ms-input-placeholder {
+        color: transparent;
+      }
+
+      .form-label-group input::-moz-placeholder {
+        color: transparent;
+      }
+
+      .form-label-group input::placeholder {
+        color: transparent;
+      }
+
+      .form-label-group input:not(:placeholder-shown) {
+        padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+        padding-bottom: calc(var(--input-padding-y) / 3);
+      }
+
+      .form-label-group input:not(:placeholder-shown)~label {
+        padding-top: calc(var(--input-padding-y) / 3);
+        padding-bottom: calc(var(--input-padding-y) / 3);
+        font-size: 12px;
+        color: #777;
+      }
+
+      /* Fallback for Edge
+      -------------------------------------------------- */
+
+      @supports (-ms-ime-align: auto) {
+        .form-label-group>label {
+          display: none;
+        }
+        .form-label-group input::-ms-input-placeholder {
+          color: #777;
+        }
+      }
+
+      /* Fallback for IE
+      -------------------------------------------------- */
+
+      @media all and (-ms-high-contrast: none),
+      (-ms-high-contrast: active) {
+        .form-label-group>label {
+          display: none;
+        }
+        .form-label-group input:-ms-input-placeholder {
+          color: #777;
+        }
+      }
+
