aggiunto css custom e fix layout in generale

--- a/resources/sass/css_custom.scss
+++ b/resources/sass/css_custom.scss
@@ -158,7 +158,7 @@
       }
 
       .bg-image {
-        background-image: url('https://source.unsplash.com/WEQbe2jBg40/600x1200');
+        background-image: url('https://www.wozur.com/wozur/public/user_files/images/Login.png');
         background-size: cover;
         background-position: center;
       }
