--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11006,7 +11006,7 @@ body {
 }
 
 .bg-image {
-  background-image: url("https://source.unsplash.com/WEQbe2jBg40/600x1200");
+  background-image: url("https://www.wozur.com/wozur/public/user_files/images/Login.png");
   background-size: cover;
   background-position: center;
 }
