--- a/resources/sass/css_custom.scss
+++ b/resources/sass/css_custom.scss
@@ -15,13 +15,32 @@
     background-color: rgba(255, 255, 255, 0.5);
 }
  .bg-custom{
-     background-color: transparent;
+    background-color: transparent;
  }
+
+ 
  @media (min-width: 991px){
      .bg-custom{
          background-color: white;
         }
+      .logo-custom{
+        width: 7%;
+      }
     }
+
+  @media (max-width: 990px) {
+    .logo-custom{
+      width: 30%;
+    }
+  }
+
+  @media (max-width: 450px) {
+    .logo-custom{
+      width: 30%;
+    }
+  }
+
+
 
 
     //Register form custom
