--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,13 +1,13 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url("https://fonts.googleapis.com/css?family=Nunito");
 
 // Variables
-@import 'variables';
+@import "variables";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
 
-@import 'css_custom';
+@import "css_custom";
 
 //font-awesome
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
@@ -15,4 +15,6 @@
 @import "~@fortawesome/fontawesome-free/scss/solid";
 @import "~@fortawesome/fontawesome-free/scss/brands";
 
-@import 'above';
+@import "above";
+
+@import "form";
