--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,3 +21,7 @@
 
 //flag icons
 @import "~flag-icon-css/sass/flag-icon";
+
+//dropzone
+@import "~dropzone/dist/basic";
+@import "~dropzone/dist/dropzone";
