--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10833,18 +10833,32 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-.masthead {
+html {
   height: 100%;
-  min-height: 100vh;
-  background-image: url("/img/bg_bggenerator_com.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
-* {
-  font-family: "Open Sans", sans-serif;
-  font-family: "Roboto", sans-serif;
+body {
+  font-family: "Signika", sans-serif;
+  background-color: black;
+  min-height: 100%;
+}
+
+.head {
+  height: 100% !important;
+}
+
+.carousel-item {
+  height: 95vh;
+  min-height: 350px;
+  background: no-repeat center center scroll;
+  background-size: cover;
+}
+
+#searchBar {
+  position: absolute;
+  top: 40%;
+  left: 25%;
+  width: 50%;
 }
 
 .articlesForm {
@@ -10853,6 +10867,11 @@ textarea.form-control-lg {
 
 .bg-custom {
   background-color: transparent;
+}
+
+.footerCustom {
+  position: relative;
+  bottom: 0;
 }
 
 @media (min-width: 991px) {
@@ -17005,11 +17024,7 @@ readers do not read off random characters that represent icons */
 
 :root {
   --input-padding-x: 1.5rem;
-  --input-padding-y: .75rem;
-}
-
-.aboveContainer {
-  height: 60vh;
+  --input-padding-y: 0.75rem;
 }
 
 .card-signin {
@@ -17086,17 +17101,17 @@ readers do not read off random characters that represent icons */
 }
 
 .form-label-group input:not(:-moz-placeholder-shown) {
-  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+  padding-top: calc( var(--input-padding-y) + var(--input-padding-y) * (2 / 3) );
   padding-bottom: calc(var(--input-padding-y) / 3);
 }
 
 .form-label-group input:not(:-ms-input-placeholder) {
-  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+  padding-top: calc( var(--input-padding-y) + var(--input-padding-y) * (2 / 3) );
   padding-bottom: calc(var(--input-padding-y) / 3);
 }
 
 .form-label-group input:not(:placeholder-shown) {
-  padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+  padding-top: calc( var(--input-padding-y) + var(--input-padding-y) * (2 / 3) );
   padding-bottom: calc(var(--input-padding-y) / 3);
 }
 
@@ -17122,7 +17137,7 @@ readers do not read off random characters that represent icons */
 }
 
 /* Fallback for Edge
--------------------------------------------------- */
+  -------------------------------------------------- */
 @supports (-ms-ime-align: auto) {
   .form-label-group > label {
     display: none;
@@ -17133,7 +17148,7 @@ readers do not read off random characters that represent icons */
   }
 }
 /* Fallback for IE
--------------------------------------------------- */
+  -------------------------------------------------- */
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .form-label-group > label {
     display: none;
@@ -17146,11 +17161,6 @@ readers do not read off random characters that represent icons */
 :root {
   --input-padding-x: 1.5rem;
   --input-padding-y: 0.75rem;
-}
-
-body {
-  background: #007bff;
-  background: linear-gradient(to right, #0062e6, #33aeff);
 }
 
 .card-signin {
