--- a/resources/sass/css_custom.scss
+++ b/resources/sass/css_custom.scss
@@ -3,11 +3,41 @@ html {
 }
 body {
     font-family: "Signika", sans-serif;
-    background-color: black;
+    background-color: #222222;
     min-height: 100%;
 }
 .head {
     height: 100% !important;
+}
+
+.gradientSlide1 {
+    background-image: linear-gradient(
+            180deg,
+            rgba(34, 34, 34, 1) 0%,
+            rgba(0, 0, 0, 0) 50%,
+            rgba(34, 34, 34, 1) 100%
+        ),
+        url("/img/slide1.jpg") !important;
+}
+
+.gradientSlide2 {
+    background-image: linear-gradient(
+            180deg,
+            rgba(34, 34, 34, 1) 0%,
+            rgba(0, 0, 0, 0) 50%,
+            rgba(34, 34, 34, 1) 100%
+        ),
+        url("/img/slide2.jpg") !important;
+}
+
+.gradientSlide3 {
+    background-image: linear-gradient(
+            180deg,
+            rgba(34, 34, 34, 1) 0%,
+            rgba(0, 0, 0, 0) 50%,
+            rgba(34, 34, 34, 1) 100%
+        ),
+        url("/img/slide3.jpg") !important;
 }
 
 .carousel-item {
@@ -22,7 +52,7 @@ body {
 
 #searchBar {
     position: absolute;
-    top: 40%;
+    top: 30%;
     left: 25%;
     width: 50%;
 }
@@ -35,8 +65,9 @@ body {
 }
 
 .footerCustom {
-    position: relative;
+    position: fixed;
     bottom: 0;
+    height: 50px;
 }
 
 @media (min-width: 991px) {
