theme dark complete

--- a/resources/sass/css_custom.scss
+++ b/resources/sass/css_custom.scss
@@ -70,6 +70,13 @@ body {
     height: 50px;
 }
 
+.btn-custom {
+    background-color: #f1bf0f;
+}
+.text-custom {
+    color: #f1bf0f;
+}
+
 @media (min-width: 991px) {
     .bg-custom {
         background-color: white;
