--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10887,6 +10887,14 @@ body {
   height: 50px;
 }
 
+.btn-custom {
+  background-color: #f1bf0f;
+}
+
+.text-custom {
+  color: #f1bf0f;
+}
+
 @media (min-width: 991px) {
   .bg-custom {
     background-color: white;
