--- a/resources/sass/form.scss
+++ b/resources/sass/form.scss
@@ -20,8 +20,7 @@
 .card-signin .card-img-left {
     width: 45%;
     /* Link to your background image using in the property below! */
-    background: scroll center
-        url("https://freepikpsd.com/wp-content/uploads/2019/10/registration-icon-png-1-Transparent-Images.png");
+    background: scroll center url("/img/register.png");
     background-size: cover;
 }
 
@@ -35,7 +34,7 @@
 
 .form-signin .btn {
     font-size: 80%;
-    border-radius: 5rem;
+
     letter-spacing: 0.1rem;
     font-weight: bold;
     padding: 1rem;
@@ -49,7 +48,7 @@
 
 .form-label-group input {
     height: auto;
-    border-radius: 2rem;
+    border-radius: 0.25rem !important;
 }
 
 .form-label-group > input,
@@ -130,7 +129,7 @@
 }
 
 .bg-image {
-    background-image: url("https://www.wozur.com/wozur/public/user_files/images/Login.png");
+    background-image: url("/img/login.png");
     background-size: cover;
     background-position: center;
 }
@@ -143,7 +142,6 @@
     font-size: 0.9rem;
     letter-spacing: 0.05rem;
     padding: 0.75rem 1rem;
-    border-radius: 2rem;
 }
 
 .form-label-group {
@@ -155,7 +153,6 @@
 .form-label-group > label {
     padding: var(--input-padding-y) var(--input-padding-x);
     height: auto;
-    border-radius: 2rem;
 }
 
 .form-label-group > label {
