--- a/resources/sass/css_custom.scss
+++ b/resources/sass/css_custom.scss
@@ -1,13 +1,22 @@
 html {
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
+
 body {
     font-family: "Signika", sans-serif;
     background-color: #222222;
     min-height: 100%;
+    margin: 0;
+    padding: 0;
 }
 .head {
-    height: 100% !important;
+    width: 100;
+    margin: 0 auto;
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
 }
 
 .gradientSlide1 {
@@ -53,8 +62,8 @@ body {
 #searchBar {
     position: absolute;
     top: 30%;
-    left: 25%;
-    width: 50%;
+    left: 10%;
+    width: 80%;
 }
 
 .articlesForm {
@@ -65,9 +74,8 @@ body {
 }
 
 .footerCustom {
-    position: fixed;
-    bottom: 0;
-    height: 50px;
+    position: absolute;
+    bottom: -350%;
 }
 
 .btn-custom {
