--- a/resources/sass/css_custom.scss
+++ b/resources/sass/css_custom.scss
@@ -84,6 +84,11 @@ body {
 .text-custom {
     color: #f1bf0f;
 }
+.detailsBox {
+    min-height: 150px;
+    max-height: 300px;
+    overflow-y: scroll;
+}
 
 @media (min-width: 991px) {
     .bg-custom {
@@ -104,4 +109,21 @@ body {
     .logo-custom {
         width: 30%;
     }
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(13deg, #858585 14%, #858585 64%);
+    border-radius: 15px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(13deg, #f1bf0f 14%, #f1bf0f 64%);
+}
+::-webkit-scrollbar-track {
+    background: #ffffff;
+    border-radius: 15px;
+    box-shadow: inset 7px 10px 12px #f0f0f0;
 }
